packages/isar_generator/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar/isar.dart';

@Collection()
class Model {
  Model.create();

  int? id;
}
